[gd_scene load_steps=15 format=3 uid="uid://dfdiu3xi50n3v"]

[ext_resource type="Script" path="res://Scenes/UI/character_selector.gd" id="1_gs6dd"]
[ext_resource type="Theme" uid="uid://cru70siydt0qh" path="res://main_theme.tres" id="2_3ei7h"]
[ext_resource type="Resource" uid="uid://6hfc35ywbs6n" path="res://Scenes/Run/run_startup.tres" id="2_pch4q"]
[ext_resource type="Texture2D" uid="uid://cf6u4hrp3ntk6" path="res://Pokemon Assets/Pokemon/Munchlax/munchlax_icon.png" id="3_4u13v"]
[ext_resource type="Texture2D" uid="uid://u5j76e7x3ojx" path="res://Pokemon Assets/Pokemon/Gimmighoul/gimmighoul_icon.png" id="4_s1erg"]
[ext_resource type="Script" path="res://Scenes/UI/selected_characters.gd" id="6_liewm"]
[ext_resource type="Texture2D" uid="uid://cbo02mv7tnyc4" path="res://Pokemon Assets/Pokemon/Foongus/foongus_icon.png" id="6_mbjmw"]
[ext_resource type="Texture2D" uid="uid://dnp8mrqax6cj5" path="res://Pokemon Assets/Pokemon/Noibat/noibat_icon.png" id="7_2j007"]

[sub_resource type="Gradient" id="Gradient_pteh1"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_exc36"]
gradient = SubResource("Gradient_pteh1")
width = 75

[sub_resource type="LabelSettings" id="LabelSettings_v510g"]
font_size = 66
font_color = Color(0, 0, 0, 1)
outline_size = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 2)

[sub_resource type="LabelSettings" id="LabelSettings_6tik7"]
font_size = 22
font_color = Color(0, 0, 0, 1)
outline_size = 8
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 2)

[sub_resource type="ButtonGroup" id="ButtonGroup_kp2yj"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rpn0o"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gs6dd")
runStartup = ExtResource("2_pch4q")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 768.0
offset_right = 432.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = SubResource("GradientTexture1D_exc36")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 248.0
offset_bottom = 115.0
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_3ei7h")
text = "PokeName"
label_settings = SubResource("LabelSettings_v510g")

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_3ei7h")
text = "Normal Type

Likes to eat
Second line
Third line"
label_settings = SubResource("LabelSettings_6tik7")

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -121.0
offset_right = 127.0
offset_bottom = -1.0
grow_vertical = 0
texture = ExtResource("3_4u13v")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -43.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_3ei7h")
text = "Start"

[node name="CharacterButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 4.0
offset_right = -11.0
offset_bottom = 102.0
grow_horizontal = 0

[node name="MunchlaxButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_kp2yj")

[node name="Icon" type="TextureRect" parent="CharacterButtons/MunchlaxButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4u13v")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="GimmighoulButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_group = SubResource("ButtonGroup_kp2yj")

[node name="Icon" type="TextureRect" parent="CharacterButtons/GimmighoulButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_s1erg")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="FoongusButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_group = SubResource("ButtonGroup_kp2yj")

[node name="Icon" type="TextureRect" parent="CharacterButtons/FoongusButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mbjmw")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="NoibatButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_group = SubResource("ButtonGroup_kp2yj")

[node name="Icon" type="TextureRect" parent="CharacterButtons/NoibatButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_2j007")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="SelectedCharacters" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
offset_left = 563.0
offset_top = 373.0
offset_right = 663.0
offset_bottom = 418.0
alignment = 1
script = ExtResource("6_liewm")

[node name="Character1Button" type="Button" parent="SelectedCharacters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_rpn0o")

[node name="Icon" type="TextureRect" parent="SelectedCharacters/Character1Button"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -17.5
offset_right = 17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Character2Button" type="Button" parent="SelectedCharacters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme = ExtResource("2_3ei7h")
toggle_mode = true
button_group = SubResource("ButtonGroup_rpn0o")

[node name="Icon" type="TextureRect" parent="SelectedCharacters/Character2Button"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -17.5
offset_right = 17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Credits" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 131.0
offset_top = -25.0
offset_right = 219.0
offset_bottom = 12.0
grow_vertical = 0
theme = ExtResource("2_3ei7h")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "Icon by:
Sprite by:"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/MunchlaxButton" to="." method="_on_munchlax_button_pressed"]
[connection signal="pressed" from="CharacterButtons/GimmighoulButton" to="." method="_on_gimmighoul_button_pressed"]
[connection signal="pressed" from="CharacterButtons/FoongusButton" to="." method="_on_foongus_button_pressed"]
[connection signal="pressed" from="CharacterButtons/NoibatButton" to="." method="_on_noibat_button_pressed"]
[connection signal="pressed" from="SelectedCharacters/Character1Button" to="." method="_on_character_1_button_pressed"]
[connection signal="pressed" from="SelectedCharacters/Character2Button" to="." method="_on_character_2_button_pressed"]
